# BRISK_experiments

./: .gitignore  .gitmodules  README.md  install_all.sh  install_apt_dependencies.sh  install_brisk.sh  main.py  plots.py  run_bifrost.py  run_brisk.py  run_cbl.py  run_hashmap.py  run_jellyfish.py  runner.py  util.py
hashmap/: Cargo.toml  build.rs
hashmap/src/: main.rs
kmer_count/: .gitignore  Cargo.toml  build.rs
kmer_count/src/: main.rs
